fixed li alignment

--- a/css/committee.css
+++ b/css/committee.css
@@ -39,5 +39,9 @@
 }
 
 .row-2 p {
-  color: white;
+    color: white;
+}
+
+.row-2 li {
+    margin-left: 1.2vmax;
 }
